--- a/src/components/MenuItem/MenuItem.styles.scss
+++ b/src/components/MenuItem/MenuItem.styles.scss
@@ -1,17 +1,3 @@
-.homepage {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px 80px;
-}
-
-.directory-menu {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
 .menu-item {
   min-width: 30%;
   height: 240px;
@@ -30,9 +16,16 @@
     margin-right: 7.5px;
   }
 
-  &:hover {
-    color: red;
-  }
+  //   &:hover {
+  //     color: red;
+  //     border: 1px solid red;
+  //     .content {
+  //       border: 1px solid red;
+  //     }
+  //     .title {
+  //       color: red;
+  //     }
+  //   }
 
   .content {
     height: 90px;
@@ -42,5 +35,17 @@
     align-items: center;
     justify-content: center;
     border: 1px solid black;
+  }
+
+  .title {
+    font-weight: bold;
+    margin-bottom: 6px;
+    font-size: 22px;
+    color: #4a4a4a;
+  }
+
+  .subtitle {
+    font-weight: lighter;
+    font-size: 16px;
   }
 }
