--- a/src/components/MenuItem/MenuItem.styles.scss
+++ b/src/components/MenuItem/MenuItem.styles.scss
@@ -7,6 +7,11 @@
   justify-content: center;
   border: 1px solid black;
   margin: 0 7.5px 15px;
+  overflow: hidden;
+
+  &.large {
+    height: 380px;
+  }
 
   &:first-child {
     margin-right: 7.5px;
@@ -16,16 +21,25 @@
     margin-right: 7.5px;
   }
 
-  //   &:hover {
-  //     color: red;
-  //     border: 1px solid red;
-  //     .content {
-  //       border: 1px solid red;
-  //     }
-  //     .title {
-  //       color: red;
-  //     }
-  //   }
+  &:hover {
+    cursor: pointer;
+
+    & .background-image {
+      transform: scale(1.1);
+      transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
+    }
+
+    &.content {
+      opacity: 0.9;
+    }
+  }
+
+  .background-image {
+    height: 100%;
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+  }
 
   .content {
     height: 90px;
@@ -35,6 +49,9 @@
     align-items: center;
     justify-content: center;
     border: 1px solid black;
+    background-color: white;
+    opacity: 0.7;
+    position: absolute;
   }
 
   .title {
